country rules for bike and foot (#3259)
* move country rules into parser

* country rules for bike and foot